<resources>
    <string name="app_name">NotesApp</string>
    <string name="home_title">Home</string>
    <string name="create_title">New note</string>
    <string name="calendar_title">Calendar</string>
    <string name="headingHint">Place for your heading</string>
    <string name="detailsHint">Add details to note</string>
    <string name="dateHint">On what date it occurs</string>
    <string name="timeHint">On what time it occurs</string>
    <string name="priorityHint">Priority number</string>
    <string name="colorPickerHeading">Note color</string>
    <string name="empty_string"> </string>
    <string name="date_when_label">DATE</string>
    <string name="time_when_label">TIME</string>
    <string name="datetime">DateTime</string>
    <string name="note_notification_channel_id" translatable="false">note_channel</string>
    <string name="note_notification_channel_name" translatable="false">Reminder</string>
    <string name="note_notification_title">NotesApp Reminder</string>
    <string name="delete_option">Delete</string>
    <string name="calendar_fragment">Calendar fragment</string>
    <string name="submit">Submit</string>
    <string name="note_date_created_test">11.05.2020</string>
    <string name="note_time_created_test">13:04</string>
    <string name="note_heading_test1">This is example of one line heading</string>
    <string name="note_heading_test2">This is example of two line heading in Figma and I like it pretty much</string>
    <string name="note_heading_test3">This is example of three line heading in Figma and I like it pretty much although this is way to long for my app so here we go</string>
    <string name="note_details_test1">This is example of one line details woala</string>
    <string name="note_details_test2">This is example if two line details in this Android studio and I pretty much like it very much hehe</string>
    <string name="datetime_label">Notification triggers at:</string>
    <string name="action_search_string">Search</string>
    <string name="action_sort_string">Sort</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="priority_label">Priority</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="search_hint">Search note</string>
    <string name="search">Search</string>
    <string name="fab_content_desc">Save</string>
    <string name="sort_by">Sort by</string>
    <string name="by_priority">Priority</string>
    <string name="created_date">Created Date</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="color">Color</string>

    <string name="scheduled_notes_date">Scheduled notes on %1$s</string>
</resources>
