<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_name"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_priority"
                  android:title="@string/by_priority"/>
            <item android:id="@+id/sort_date_created"
                android:title="@string/created_date"/>
            <item android:id="@+id/sort_date_scheduled"
                android:title="@string/scheduled_date"/>
            <item android:id="@+id/sort_color"
                android:title="@string/color"/>
        </menu>
    </item>
</menu>